# servingbot_ros

./: README.md
serving_arm/find_object/launch/: find_object_3d_D415.launch
serving_arm/find_object/src/ros/: FindObjectROS.cpp  print_objects_detected_node.cpp  tf_example_node.cpp
serving_arm/manipulator_description/: CMakeLists.txt  package.xml  urdf.rviz
serving_arm/manipulator_description/config/: joint_names_serving0514.yaml
serving_arm/manipulator_description/launch/: display.launch  gazebo.launch
serving_arm/manipulator_description/meshes/: base_link.STL  camera_link.STL  gripper.STL  link1.STL  link2.STL  link3.STL  rotate_part.STL
serving_arm/manipulator_description/urdf/: manipulator_description.urdf
serving_arm/manipulator_moveit_config_second/: .setup_assistant  CMakeLists.txt  package.xml
serving_arm/manipulator_moveit_config_second/config/: fake_controllers.yaml  joint_limits.yaml  manipulator_description.srdf  ompl_planning.yaml  ros_controllers.yaml
serving_arm/manipulator_moveit_config_second/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  manipulator_all.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  trajectory_execution.launch.xml  warehouse.launch
serving_arm/manipulator_moveit_config_second/launch/Not Use/: chomp_planning_pipeline.launch.xml  gazebo.launch  manipulator_description_moveit_controller_manager.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch
serving_arm/realsense_ros/realsense2_camera/launch/: rs_camera.launch
serving_arm/serving_arm/: CMakeLists.txt  package.xml
serving_bot/: CMakeLists.txt  package.xml
serving_bot/launch/: serving_bot.launch
serving_bot/src/: serving_bot (copy).cpp  serving_bot.cpp
serving_mobile/rplidar_ros/src/: node.cpp
serving_mobile/servingbot_description/urdf/: servingbot.urdf.xacro
serving_mobile/servingbot_navigation/maps/: map.pgm  map.yaml
serving_mobile/servingbot_navigation/param/: costmap_common_params_servingbot.yaml  dwa_local_planner_params_servingbot.yaml
serving_mobile/servingbot_navigation/rviz/: servingbot_navigation.rviz
